# tree-sitter-mlir

./: CMakeLists.txt  Cargo.toml  go.mod
bindings/go/: binding_test.go
bindings/node/: index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_mlir/: __init__.py
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterMlirTests/: TreeSitterMlirTests.swift
